<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:layout_marginStart="@dimen/padding_left"
        android:layout_marginEnd="@dimen/padding_right"
        android:text="@string/textView" />

    <Switch
        android:id="@+id/switchOfSeconded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/switchText"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkOption1"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkOption2"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/choosingSeconded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/padding_left"
        android:text="@string/addSeconded"
        android:textSize="12sp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textOn="@string/toggleButtonON"
        android:textOff="@string/toggleButtonOFF" />


</LinearLayout>