<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="16sp"
        android:textColor="@color/teal_700"
        android:layout_marginStart="@dimen/padding_left" />

    <EditText
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/setName"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:width="200dp"
        android:height="40dp" />

    <EditText
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/age"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:width="150dp"
        android:height="40dp" />

    <EditText
        android:inputType="phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/phone"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:width="150dp"
        android:height="40dp" />

    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/email"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        android:width="150dp"
        android:height="40dp" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/secretText"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:width="150dp"
        android:height="60dp" />

    <EditText
        android:id="@+id/returnHello"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnHello"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        android:gravity="center_horizontal"
        android:width="200dp"
        android:height="40dp" />

    <CalendarView
        android:layout_width="319dp"
        android:layout_height="296dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>